--- a/index.html
+++ b/index.html
@@ -11,5 +11,6 @@
   <header id="cabecalho">
     <h1 id="titulo">Lições aprendidas - Trybe!</h1>
   </header>
+  <img src="image/minha-foto.jpg" alt="Foto de Anderson Silva" id="minha_foto" width="150px">
 </body>
 </html>
