--- a/index.html
+++ b/index.html
@@ -12,5 +12,17 @@
     <h1 id="titulo">Lições aprendidas - Trybe!</h1>
   </header>
   <img src="image/minha-foto.jpg" alt="Foto de Anderson Silva" id="minha_foto" width="150px">
+  <ol id="licoes_aprendidas">
+    <li>Unix</li>
+    <li>Bash</li>
+    <li>Git</li>
+    <li>Github</li>
+    <li>Internet</li>
+    <li>Estrutura HTML</li>
+    <li>Primeiros passos em CSS</li>
+    <li>Seletores</li>
+    <li>Posicionamento</li>
+    <li>HTML Semântico</li>
+  </ol>
 </body>
 </html>
