--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <img src="image/minha-foto.jpg" alt="Foto de Anderson Silva" id="minha_foto" width="150px">
   <ol id="licoes_aprendidas">
     <li>Unix</li>
-    <li>Bash</li>
+    <li>Slack</li>
     <li>Git</li>
     <li>Github</li>
     <li>Internet</li>
@@ -24,5 +24,17 @@
     <li>Posicionamento</li>
     <li>HTML Semântico</li>
   </ol>
+  <ul id="licoes_a_aprender">
+    <li>Javascript</li>
+    <li>DOM</li>
+    <li>Forms</li>
+    <li>CSS Responsive</li>
+    <li>ES6</li>
+    <li>HOF</li>
+    <li>Unit Tests</li>
+    <li>React</li>
+    <li>Node</li>
+    <li>SQL</li>
+  </ul>
 </body>
 </html>
