--- a/index.html
+++ b/index.html
@@ -11,30 +11,33 @@
   <header id="cabecalho">
     <h1 id="titulo">Lições aprendidas - Trybe!</h1>
   </header>
-  <img src="image/minha-foto.jpg" alt="Foto de Anderson Silva" id="minha_foto" width="150px">
-  <ol id="licoes_aprendidas">
-    <li>Unix</li>
-    <li>Slack</li>
-    <li>Git</li>
-    <li>Github</li>
-    <li>Internet</li>
-    <li>Estrutura HTML</li>
-    <li>Primeiros passos em CSS</li>
-    <li>Seletores</li>
-    <li>Posicionamento</li>
-    <li>HTML Semântico</li>
-  </ol>
-  <ul id="licoes_a_aprender">
-    <li>Javascript</li>
-    <li>DOM</li>
-    <li>Forms</li>
-    <li>CSS Responsive</li>
-    <li>ES6</li>
-    <li>HOF</li>
-    <li>Unit Tests</li>
-    <li>React</li>
-    <li>Node</li>
-    <li>SQL</li>
-  </ul>
+  <main>
+    <img src="image/minha-foto.jpg" alt="Foto de Anderson Silva" id="minha_foto" width="150px">
+    <ol id="licoes_aprendidas">
+      <li>Unix</li>
+      <li>Slack</li>
+      <li>Git</li>
+      <li>Github</li>
+      <li>Internet</li>
+      <li>Estrutura HTML</li>
+      <li>Primeiros passos em CSS</li>
+      <li>Seletores</li>
+      <li>Posicionamento</li>
+      <li>HTML Semântico</li>
+    </ol>
+    <ul id="licoes_a_aprender">
+      <li>Javascript</li>
+      <li>DOM</li>
+      <li>Forms</li>
+      <li>CSS Responsive</li>
+      <li>ES6</li>
+      <li>HOF</li>
+      <li>Unit Tests</li>
+      <li>React</li>
+      <li>Node</li>
+      <li>SQL</li>
+    </ul>
+  </main>
+  <footer id="rodape"></footer>
 </body>
 </html>
