--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
     <h1 id="titulo">Lições aprendidas - Trybe!</h1>
   </header>
   <main>
-    <img src="image/minha-foto.jpg" alt="Foto de Anderson Silva" id="minha_foto" width="150px">
+    <img src="image/minha-foto.jpg" alt="Foto de Anderson Silva" id="minha_foto" width="150px"><br>
+    <a href="https://www.linkedin.com/in/ap-silva/" target="_blank">Anderson Silva - LinkedIn</a>
     <ol id="licoes_aprendidas">
       <li>Unix</li>
       <li>Slack</li>
