--- a/index.html
+++ b/index.html
@@ -38,6 +38,9 @@
       <li>Node</li>
       <li>SQL</li>
     </ul>
+    <article>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis eius sequi aspernatur ratione magnam, soluta similique labore necessitatibus quo numquam dicta! Quasi illum, consequuntur quaerat commodi id, a suscipit qui non at deserunt nobis et cum nisi consectetur nesciunt rem, inventore nulla alias nemo reprehenderit. Voluptas, vel? Beatae, est non?
+    </article>
   </main>
   <footer id="rodape"></footer>
 </body>
