--- a/index.html
+++ b/index.html
@@ -10,34 +10,39 @@
 <body>
   <header id="cabecalho">
     <h1 id="titulo">Lições aprendidas - Trybe!</h1>
+    <nav id="nav">
+      <a href="#">Home</a>
+      <a href="https://www.linkedin.com/in/ap-silva/" target="_blank">LinkedIn</a>
+    </nav>
   </header>
   <main>
-    <img src="image/minha-foto.jpg" alt="Foto de Anderson Silva" id="minha_foto" width="150px"><br>
-    <a href="https://www.linkedin.com/in/ap-silva/" target="_blank">Anderson Silva - LinkedIn</a>
-    <ol id="licoes_aprendidas">
-      <li>Unix</li>
-      <li>Slack</li>
-      <li>Git</li>
-      <li>Github</li>
-      <li>Internet</li>
-      <li>Estrutura HTML</li>
-      <li>Primeiros passos em CSS</li>
-      <li>Seletores</li>
-      <li>Posicionamento</li>
-      <li>HTML Semântico</li>
-    </ol>
-    <ul id="licoes_a_aprender">
-      <li>Javascript</li>
-      <li>DOM</li>
-      <li>Forms</li>
-      <li>CSS Responsive</li>
-      <li>ES6</li>
-      <li>HOF</li>
-      <li>Unit Tests</li>
-      <li>React</li>
-      <li>Node</li>
-      <li>SQL</li>
-    </ul>
+    <img src="image/minha-foto.jpg" alt="Foto de Anderson Silva" id="minha_foto" width="150px">
+    <section id="section-licoes">
+      <ol id="licoes_aprendidas">
+        <li>Unix</li>
+        <li>Slack</li>
+        <li>Git</li>
+        <li>Github</li>
+        <li>Internet</li>
+        <li>Estrutura HTML</li>
+        <li>Primeiros passos em CSS</li>
+        <li>Seletores</li>
+        <li>Posicionamento</li>
+        <li>HTML Semântico</li>
+      </ol>
+      <ul id="licoes_a_aprender">
+        <li>Javascript</li>
+        <li>DOM</li>
+        <li>Forms</li>
+        <li>CSS Responsive</li>
+        <li>ES6</li>
+        <li>HOF</li>
+        <li>Unit Tests</li>
+        <li>React</li>
+        <li>Node</li>
+        <li>SQL</li>
+      </ul>
+    </section>
     <article>
       Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis eius sequi aspernatur ratione magnam, soluta similique labore necessitatibus quo numquam dicta! Quasi illum, consequuntur quaerat commodi id, a suscipit qui non at deserunt nobis et cum nisi consectetur nesciunt rem, inventore nulla alias nemo reprehenderit. Voluptas, vel? Beatae, est non?
     </article>
