--- a/index.html
+++ b/index.html
@@ -46,6 +46,11 @@
     <article>
       Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis eius sequi aspernatur ratione magnam, soluta similique labore necessitatibus quo numquam dicta! Quasi illum, consequuntur quaerat commodi id, a suscipit qui non at deserunt nobis et cum nisi consectetur nesciunt rem, inventore nulla alias nemo reprehenderit. Voluptas, vel? Beatae, est non?
     </article>
+    <table>
+      <tr>
+        <td>Tabela</td>
+      </tr>
+    </table>
     <aside>
       Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aspernatur dignissimos blanditiis possimus architecto? Consequatur maxime corporis provident facere molestiae rem animi numquam enim expedita, at ipsum, nesciunt quia minus reprehenderit.
     </aside>
