--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <a href="https://www.linkedin.com/in/ap-silva/" target="_blank">LinkedIn</a>
     </nav>
   </header>
-  <main>
+  <main id="main">
     <img src="image/minha-foto.jpg" alt="Foto de Anderson Silva" id="minha_foto" width="150px">
     <section id="section-licoes">
       <ol id="licoes_aprendidas">
@@ -43,7 +43,7 @@
         <li>SQL</li>
       </ul>
     </section>
-    <article>
+    <article class="border">
       Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis eius sequi aspernatur ratione magnam, soluta similique labore necessitatibus quo numquam dicta! Quasi illum, consequuntur quaerat commodi id, a suscipit qui non at deserunt nobis et cum nisi consectetur nesciunt rem, inventore nulla alias nemo reprehenderit. Voluptas, vel? Beatae, est non?
     </article>
     <table>
@@ -51,7 +51,7 @@
         <td>Tabela</td>
       </tr>
     </table>
-    <aside>
+    <aside class="border">
       Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aspernatur dignissimos blanditiis possimus architecto? Consequatur maxime corporis provident facere molestiae rem animi numquam enim expedita, at ipsum, nesciunt quia minus reprehenderit.
     </aside>
   </main>
