--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         <td>Tabela</td>
       </tr>
     </table>
-    <aside class="border">
+    <aside id="aside" class="border">
       Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aspernatur dignissimos blanditiis possimus architecto? Consequatur maxime corporis provident facere molestiae rem animi numquam enim expedita, at ipsum, nesciunt quia minus reprehenderit.
     </aside>
   </main>
