Adiciona novos estilos

--- a/index.html
+++ b/index.html
@@ -9,16 +9,15 @@
 </head>
 <body>
   <header id="cabecalho">
-    <h1 id="titulo">Lições aprendidas - Trybe!</h1>
+    <h1 id="titulo">Meu primeiro projeto - Trybe!</h1>
+  </header>
+    <img src="image/minha_foto.jpg" alt="Foto de Anderson Silva" id="minha_foto">
     <nav id="nav">
-      <a href="#">Home</a>
       <a href="https://www.linkedin.com/in/ap-silva/" target="_blank">LinkedIn</a>
     </nav>
-  </header>
-  <main id="main">
-    <img src="image/minha-foto.jpg" alt="Foto de Anderson Silva" id="minha_foto" width="150px">
-    <section id="section-licoes">
-      <ol id="licoes_aprendidas">
+    <section id="section-licoes-aprendidas">
+      <h2 class="skills">Skills Atuais</h2>
+      <ol id="licoes_aprendidas"> 
         <li>Unix</li>
         <li>Slack</li>
         <li>Git</li>
@@ -30,6 +29,9 @@
         <li>Posicionamento</li>
         <li>HTML Semântico</li>
       </ol>
+    </section>
+    <section id="section-licoes-a-aprender"> 
+      <h2 class="skills">Proximas Skills</h2>
       <ul id="licoes_a_aprender">
         <li>Javascript</li>
         <li>DOM</li>
@@ -42,9 +44,9 @@
         <li>Node</li>
         <li>SQL</li>
       </ul>
-    </section>
+    </section>  
 
-    <table border="1">
+    <table>
       <tr>
         <td>Artigos</td>
       </tr>
@@ -56,7 +58,9 @@
     <aside id="aside" class="border lado-direito">
       Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aspernatur dignissimos blanditiis possimus architecto? Consequatur maxime corporis provident facere molestiae rem animi numquam enim expedita, at ipsum, nesciunt quia minus reprehenderit.
     </aside>
-  </main>
-  <footer id="rodape"></footer>
+
+  <footer id="rodape">
+    <h3>Criado por Anderson Silva</h3>
+  </footer>
 </body>
 </html>
