Adiciona estilo css

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
       Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis eius sequi aspernatur ratione magnam, soluta similique labore necessitatibus quo numquam dicta! Quasi illum, consequuntur quaerat commodi id, a suscipit qui non at deserunt nobis et cum nisi consectetur nesciunt rem, inventore nulla alias nemo reprehenderit. Voluptas, vel? Beatae, est non?
     </article>
     <aside id="aside" class="border lado-direito">
-      Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aspernatur dignissimos blanditiis possimus architecto? Consequatur maxime corporis provident facere molestiae rem animi numquam enim expedita, at ipsum, nesciunt quia minus reprehenderit.
+      Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aspernatur dignissimos blanditiis possimus architecto? Consequatur maxime corporis provident facere molestiae rem animi numquam enim expedita, at ipsum, nesciunt quia minus reprehenderit..
     </aside>
 
   <footer id="rodape">
